[project]
name = "cne-dagster-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.10.6",
    "dagster-dbt>=0.26.6",
    "dagster-webserver>=1.10.6",
    "dbt-bigquery>=1.9.1",
    "dbt-core>=1.9.3",
]
